--- a/index.html
+++ b/index.html
@@ -5,30 +5,34 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-	<title>musenmai</title>
+	<title>試し_塗り2</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<link rel="icon" type="image/png" href="img/logo_brack.png" sizes="16x16">
     <link rel="icon" type="image/png" href="img/logo_brack.png" sizes="32x32">
     <link rel="icon" type="image/png" href="img/logo_brack.png" sizes="96x96">
 
-	<style>
-	body {
-		background:#000;
-		padding:0;
-		margin:0;
-		overflow:hidden;
-	}
-	</style>
+	<link rel="stylesheet" href="css/style.css">
+	<script src="js/three.js"></script>
+	<script src="js/DecalGeometry.js"></script>
+	<script src="js/stats.min.js"></script>
+	<script src="js/dat.gui.min.js"></script>
+	<link href="css/featherlight.min.css" type="text/css" rel="stylesheet" />
+	<script src="js/jquery-1.7.0.min.js"></script>
+	<script src="js/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+
 
 </head>
 <body>
 
+<div id="info">
+	<a href="#" data-featherlight="#mylightbox">about</a>
+	demo
+	github
+</div>
+
 <div id="container"></div>
 
-<script src="js/three.js"></script>
-<script src="js/DecalGeometry.js"></script>
-<script src="js/dat.gui.min.js"></script>
 
 <script>
 
@@ -107,9 +111,9 @@
 		{
             var material = new THREE.MeshBasicMaterial(materials);
             musenmai = new THREE.Mesh(geometry, material);
-            musenmai.position.set(-14, 9, 40);
+            musenmai.position.set(-16, 10, 40);
             musenmai.rotation.set(0, -Math.PI/2.35, 0);
-            musenmai.scale.set(12, 12, 12);
+            musenmai.scale.set(10, 10, 10);
             scene.add(musenmai);
         });
 		//logo
@@ -118,7 +122,7 @@
 		{
 			var material = new THREE.MeshBasicMaterial(materials);
 			musenmai = new THREE.Mesh(geometry, material);
-			musenmai.position.set(-36, 10, 40);
+			musenmai.position.set(-36, 10, 45);
 			musenmai.rotation.set(0, Math.PI/10, 0);
 			musenmai.scale.set(3, 3, 3);
 			scene.add(musenmai);
@@ -129,38 +133,38 @@
         var loader = new THREE.FontLoader();
         loader.load( 'font/optimer_regular.typeface.json', function(font)
 		{
-        	var textGeometry1 = new THREE.TextGeometry("about", {
+        	var textGeometry1 = new THREE.TextGeometry("8/4 12:00 - 19:00", {
         		font: font,
         		size: 2.5,
         		height: 0.5,
         		curveSegments: 12
         	});
-            var textGeometry2 = new THREE.TextGeometry("work", {
+            var textGeometry2 = new THREE.TextGeometry("8/5 10:00 - 18:00", {
         		font: font,
         		size: 2.5,
         		height: 0.5,
         		curveSegments: 12
         	});
-            var textGeometry3 = new THREE.TextGeometry("SNS", {
+            var textGeometry3 = new THREE.TextGeometry("B / 03-02", {
         		font: font,
-        		size: 2.5,
+        		size: 3,
         		height: 0.5,
         		curveSegments: 12
         	});
         	var materials = new THREE.MeshBasicMaterial({color: 0xffffff});
-        	var about = new THREE.Mesh(textGeometry1, materials);
-            about.position.set(-25, 0, 35);
-			about.rotation.set(0, Math.PI/20, 0);
-            var work = new THREE.Mesh(textGeometry2, materials);
-            work.position.set(-25, -8, 35);
-			work.rotation.set(0, Math.PI/20, 0);
-            var sns = new THREE.Mesh(textGeometry3, materials);
-            sns.position.set(-25, -16, 35);
-			sns.rotation.set(0, Math.PI/20, 0);
+        	var a = new THREE.Mesh(textGeometry1, materials);
+            a.position.set(-28, 0, 40);
+			a.rotation.set(0, Math.PI/20, 0);
+            var b = new THREE.Mesh(textGeometry2, materials);
+            b.position.set(-28, -8, 40);
+			b.rotation.set(0, Math.PI/20, 0);
+            var c = new THREE.Mesh(textGeometry3, materials);
+            c.position.set(-24, -16, 40);
+			c.rotation.set(0, Math.PI/20, 0);
 
-            scene.add(about);
-            scene.add(work);
-        	scene.add(sns);
+            scene.add(a);
+            scene.add(b);
+        	scene.add(c);
 
         });
 
@@ -256,7 +260,8 @@
 			var materials = new THREE.MeshBasicMaterial({color: 0xffffff});
 			mesh = new THREE.Mesh( geometry, materials );
 			scene.add( mesh );
-			mesh.position.set(30, -97, -30);
+			mesh.position.set(60, -97, -30);
+			mesh.rotation.set(0, Math.PI, 0);
 			mesh.scale.set( 39, 39, 39 );
 		} );
 	}
