--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             scene.add(b);
         	scene.add(c);
 
-			DDDINK.addURL(c, 'proto_nuru01.html');
+			DDDINK.addURL(c, 'http://makezine.jp/event/makers2018/m0282/');
 
 
         });
