--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@
         	scene.add(c);
 
 			DDDINK.addURL(c, 'http://makezine.jp/event/makers2018/m0282/');
+			c.userData.linkConfig.setNewTab( 'ON' );
+
 
 
         });
